crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_event_scroll_up.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: js.unwrap()
---
(function(){
    const target = document.activeElement || document.body;
    target.dispatchEvent(new WheelEvent('wheel', { deltaY: -120, bubbles: true }));
})()
