crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_parse_entity_decoding.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: to_snap(&ir)
---
Element(
    SnapIrElement {
        tag: "div",
        attrs: {},
        styles: {},
        children: [
            Element(
                SnapIrElement {
                    tag: "p",
                    attrs: {},
                    styles: {},
                    children: [
                        Text(
                            "<hello> & \"world\"",
                        ),
                    ],
                },
            ),
        ],
    },
)
