crates/svelte-ratatui-adapter/tests/snapshots/snapshot_tests__snapshot_parse_styled_div.snap
---
source: crates/svelte-ratatui-adapter/tests/snapshot_tests.rs
expression: to_snap(&ir)
---
Element(
    SnapIrElement {
        tag: "div",
        attrs: {},
        styles: {},
        children: [
            Element(
                SnapIrElement {
                    tag: "div",
                    attrs: {
                        "class": "tui-row selected",
                    },
                    styles: {
                        "color": "#00d4ff",
                        "font-weight": "bold",
                    },
                    children: [
                        Text(
                            "Styled",
                        ),
                    ],
                },
            ),
        ],
    },
)
